--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-local.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -44,3 +43,7 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### steamp ###
+/src/main/resources/
+local.properties
